add seamless_m4t models and rebuild HTML UI

--- a/nmt_webapp/config.json
+++ b/nmt_webapp/config.json
@@ -1,4 +1,4 @@
 {
-  "en-zh": "NGC/nmt_en_zh_transformer6x6",
+  "ru-en": "NGC/nmt_ru_en_transformer6x6",
   "zh-en": "NGC/nmt_zh_en_transformer6x6"
 }
