fix CString to str

--- a/nmt_webapp/nmt_service.conf
+++ b/nmt_webapp/nmt_service.conf
@@ -1,25 +1,25 @@
 [program:nmt_service]
 directory=/home/tdh/nemo_mt/nmt_webapp
-command=/home/tdh/nemo_mt/nmt_webapp/venv/bin/python /home/tdh/nemo_mt/nmt_webapp/nmt_service.py
+command=/home/ptpm/miniconda3/envs/ocr_mt_env/bin/python /home/tdh/nemo_mt/nmt_webapp/nmt_service.py
 process_name=%(program_name)s
 numprocs=1
-user=tdh
+user=ptpm
 autostart=true
 autorestart=true
 stdout_logfile_maxbytes=5MB
 stderr_logfile_maxbytes=5MB
 redirect_stderr=true
-stdout_logfile =/home/tdh/nemo_mt/nmt_webapp/nmt_service.log
+stdout_logfile =/home/tdh/nemo_mt/nmt_webapp/logs/nmt_service.log
 
 [program:nmt_webapp]
 directory=/home/tdh/nemo_mt/nmt_webapp
-command=/home/tdh/nemo_mt/nmt_webapp/venv/bin/python -m http.server
+command=/home/ptpm/miniconda3/envs/ocr_mt_env/bin/python -m http.server
 process_name=%(program_name)s
 numprocs=1
-user=tdh
+user=ptpm
 autostart=true
 autorestart=true
 stdout_logfile_maxbytes=5MB
 stderr_logfile_maxbytes=5MB
 redirect_stderr=true
-stdout_logfile =/home/tdh/nemo_mt/nmt_webapp/nmt_webapp.log
+stdout_logfile =/home/tdh/nemo_mt/nmt_webapp/logs/nmt_webapp.log
